--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <dimen name="disabled_alpha_material_light">1dp</dimen>
     <dimen name="disabled_alpha_material_dark">1dp</dimen>
     <dimen name="highlight_alpha_material_light">1dp</dimen>
