--- a/app/src/main/res/layout/activity_create_text.xml
+++ b/app/src/main/res/layout/activity_create_text.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_home"/>
+        layout="@layout/toolbar_export"/>
     <RelativeLayout
         android:background="#F4DED3"
         android:id="@+id/rl_bg"
@@ -18,12 +18,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_width="match_parent"
         android:layout_height="0dp">
+
         <ImageView
-            android:layout_marginVertical="@dimen/_30sdp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:src="@drawable/bg_text"
-            android:layout_width="300dp"
-            android:layout_height="300dp"/>
+            android:src="@drawable/icon1" />
     </RelativeLayout>
     <RelativeLayout
         android:id="@+id/rl_view"
@@ -41,23 +41,24 @@
             <ImageView
                 android:layout_weight="1"
                 android:src="@drawable/ic_message"
-                android:layout_width="28dp"
-                android:layout_height="28dp"/>
+                android:layout_width="26dp"
+                android:layout_height="26dp"/>
             <ImageView
+                android:id="@+id/ig_keyboard"
                 android:layout_weight="1"
                 android:src="@drawable/ic_keyboard"
-                android:layout_width="28dp"
-                android:layout_height="28dp"/>
+                android:layout_width="26dp"
+                android:layout_height="26dp"/>
             <ImageView
                 android:layout_weight="1"
                 android:src="@drawable/ic_text"
-                android:layout_width="28dp"
-                android:layout_height="28dp"/>
+                android:layout_width="26dp"
+                android:layout_height="26dp"/>
             <ImageView
                 android:layout_weight="1"
                 android:src="@drawable/ic_symbol"
-                android:layout_width="28dp"
-                android:layout_height="28dp"/>
+                android:layout_width="26dp"
+                android:layout_height="26dp"/>
         </LinearLayout>
         <View
             android:id="@+id/view"
