--- a/app/src/main/res/layout/layout_dialog_text.xml
+++ b/app/src/main/res/layout/layout_dialog_text.xml
@@ -17,16 +17,23 @@
             android:layout_gravity="center"
             android:text="@string/add_text"
             style="@style/TextViewBase"/>
-        <androidx.appcompat.widget.AppCompatEditText
-            android:textColorHint="#D7C3B8"
+        <com.google.android.material.card.MaterialCardView
+            app:strokeColor="@color/white"
             android:layout_marginTop="@dimen/dp15"
-            android:paddingStart="@dimen/dp10"
-            android:paddingVertical="@dimen/dp10"
-            android:hint="@string/your_text"
-            android:background="@drawable/bg_edit_text"
+            app:cardCornerRadius="@dimen/dp10"
+            app:cardBackgroundColor="#FAEEEF"
             android:layout_width="match_parent"
-            style="@style/TextViewBase"
-            tools:ignore="RtlSymmetry" />
+            android:layout_height="wrap_content">
+            <androidx.appcompat.widget.AppCompatEditText
+                android:background="@null"
+                android:id="@+id/edit_text"
+                android:textColorHint="#D7C3B8"
+                android:paddingStart="@dimen/dp10"
+                android:paddingVertical="@dimen/dp10"
+                android:hint="@string/your_text"
+                android:layout_width="match_parent"
+                style="@style/TextViewBase" />
+        </com.google.android.material.card.MaterialCardView>
         <LinearLayout
             android:layout_marginTop="@dimen/dp15"
             android:orientation="horizontal"
