update bg create icon

--- a/app/src/main/res/drawable/see_bar_on.xml
+++ b/app/src/main/res/drawable/see_bar_on.xml
@@ -3,8 +3,8 @@
     <item android:id="@android:id/background">
         <shape>
             <gradient
-                android:endColor="#F4DED3"
-                android:startColor="#F4DED3" />
+                android:endColor="#BAA79D"
+                android:startColor="#BAA79D" />
             <corners android:radius="8dp" />
         </shape>
     </item>
@@ -13,8 +13,8 @@
         <clip>
             <shape>
                 <gradient
-                    android:endColor="#F4DED3"
-                    android:startColor="#F4DED3" />
+                    android:endColor="#BAA79D"
+                    android:startColor="#BAA79D" />
                 <corners android:radius="8dp" />
             </shape>
         </clip>
