--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="color_color_FFDFC2">#FFDFC2</color>
     <color name="color_241912">#241912</color>
+    <color name="color_988E90">#988E90</color>
+    <color name="color_DE3730">#DE3730</color>
 </resources>
