--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,29 +49,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <TextView
-                        android:fontFamily="@font/poppins_regular"
+                        android:fontFamily="@font/poppins_semibold_600"
                         android:id="@+id/create"
                         android:layout_marginStart="@dimen/dp20"
                         android:textColor="@color/white"
                         style="@style/TextViewBase"
                         android:layout_marginTop="@dimen/dp20"
-                        android:text="Create"
-                        android:textSize="@dimen/sp20"
-                        android:textStyle="bold" />
+                        android:text="@string/create"
+                        android:textSize="@dimen/sp18" />
                     <TextView
-                        android:fontFamily="@font/poppins_regular"
+                        android:fontFamily="@font/poppins_semibold_600"
                         android:layout_below="@+id/create"
                         android:layout_marginStart="@dimen/dp20"
                         android:textColor="@color/white"
                         style="@style/TextViewBase"
-                        android:text="Emoji"
-                        android:textSize="@dimen/sp20"
-                        android:textStyle="bold" />
+                        android:text="@string/Emoji"
+                        android:textSize="@dimen/sp18" />
                     <androidx.appcompat.widget.AppCompatImageView
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
                         android:layout_width="90dp"
-                        android:layout_height="90dp"
+                        android:layout_height="100dp"
                         android:src="@drawable/smile" />
 
 
@@ -97,30 +95,28 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
                     <TextView
-                        android:fontFamily="@font/poppins_regular"
+                        android:fontFamily="@font/poppins_semibold_600"
                         android:layout_marginStart="@dimen/dp20"
                         android:id="@+id/create_text"
                         android:textColor="@color/white"
                         style="@style/TextViewBase"
                         android:layout_marginTop="@dimen/dp20"
-                        android:text="Create"
-                        android:textSize="@dimen/sp20"
-                        android:textStyle="bold" />
+                        android:text="@string/create"
+                        android:textSize="@dimen/sp18" />
                     <TextView
-                        android:fontFamily="@font/poppins_regular"
+                        android:fontFamily="@font/poppins_semibold_600"
                         android:layout_marginStart="@dimen/dp20"
                         android:layout_below="@id/create_text"
                         android:textColor="@color/white"
                         style="@style/TextViewBase"
-                        android:text="Text"
-                        android:textSize="@dimen/sp20"
-                        android:textStyle="bold" />
+                        android:text="@string/text"
+                        android:textSize="@dimen/sp18" />
                     <androidx.appcompat.widget.AppCompatImageView
 
                         android:layout_alignParentBottom="true"
                         android:layout_alignParentEnd="true"
                         android:layout_width="90dp"
-                        android:layout_height="110dp"
+                        android:layout_height="120dp"
                         android:src="@drawable/create_text" />
 
 
@@ -144,7 +140,7 @@
                 android:paddingVertical="@dimen/dp16"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <ImageView
+                <androidx.appcompat.widget.AppCompatImageView
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/dp20"
                     android:id="@+id/icon"
@@ -152,17 +148,15 @@
                     android:layout_width="30dp"
                     android:layout_height="30dp"/>
                 <TextView
-                    android:fontFamily="@font/poppins_regular"
-                    android:textStyle="bold"
+                    android:fontFamily="@font/poppins_medium_500"
                     android:textColor="#000654"
                     android:layout_gravity="center"
-                    android:textSize="@dimen/sp18"
-                    android:layout_centerHorizontal="true"
-                    android:layout_toEndOf="@id/icon"
-                    android:text="My creation"
+                    android:textSize="@dimen/sp16"
+                    android:text="@string/my_creation"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
