--- a/app/src/main/res/layout/toolbar_export.xml
+++ b/app/src/main/res/layout/toolbar_export.xml
@@ -24,7 +24,7 @@
         android:text="@string/app_name"
         android:textColor="@color/color_241912"
         android:textSize="@dimen/sp16"
-        android:textStyle="bold"
+        android:fontFamily="@font/poppins_medium_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/back"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +38,7 @@
         android:text="Export"
         android:textColor="#DF6F00"
         android:textSize="@dimen/sp16"
-        android:textStyle="bold"
+        android:fontFamily="@font/poppins_medium_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
