--- a/app/src/main/res/layout/toolbar_home.xml
+++ b/app/src/main/res/layout/toolbar_home.xml
@@ -24,7 +24,7 @@
         android:text="@string/app_name"
         android:textColor="#241912"
         android:textSize="@dimen/sp18"
-        android:textStyle="bold"
+        android:fontFamily="@font/poppins_medium_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/icon_home"
         app:layout_constraintTop_toTopOf="parent" />
