--- a/app/src/main/res/layout/activity_create_icon.xml
+++ b/app/src/main/res/layout/activity_create_icon.xml
@@ -20,13 +20,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/toolbar">
-
         <ImageView
-            android:padding="@dimen/dp50"
+            android:scaleType="fitXY"
+            android:id="@+id/rl_view"
+            android:layout_centerInParent="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+        <ImageView
             android:id="@+id/img_bg"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_centerInParent="true"
+            android:padding="@dimen/dp50"
             android:src="@drawable/icon1bg" />
 
 
@@ -51,6 +56,7 @@
             android:text="Blur"
             style="@style/TextViewBase"/>
         <SeekBar
+            android:max="30"
             android:id="@+id/seek_bar"
             android:progressDrawable="@drawable/see_bar_on"
             android:progressTint="#DF6F00"
@@ -103,6 +109,7 @@
                     android:src="@drawable/ic_flip_horizontal" />
 
                 <ImageView
+                    android:id="@+id/flip_vertical"
                     android:layout_width="26dp"
                     android:layout_height="26dp"
                     android:layout_toEndOf="@id/flip_hozi"
@@ -153,6 +160,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ln_fab"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:visibility="invisible"
             android:id="@+id/color"
@@ -194,19 +209,18 @@
             android:layout_marginEnd="@dimen/dp10"
             android:layout_marginBottom="@dimen/dp10"/>
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            app:layout_constraintBottom_toTopOf="@id/view"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginEnd="@dimen/dp10"
             android:layout_marginBottom="@dimen/dp10"
             android:layout_marginTop="@dimen/dp10"
             android:id="@+id/add"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_gravity="bottom|end"
             app:backgroundTint="@color/white"
             android:src="@drawable/add_float"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:ignore="ContentDescription" />
+    </LinearLayout>
     <View
         android:id="@+id/view"
         app:layout_constraintBottom_toTopOf="@id/bottom"
@@ -215,6 +229,8 @@
         android:layout_alignParentBottom="true"
         android:background="#F4DED3" />
     <HorizontalScrollView
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         android:id="@+id/bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="horizontal"
