--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,22 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:background="#FFDFC2"
->
+    tools:context=".MainActivity">
+
     <include
         android:id="@+id/toolbar"
-        app:layout_constraintTop_toTopOf="parent"
-        layout="@layout/toolbar_home"/>
+        layout="@layout/toolbar_home"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         android:background="@drawable/bg_home_app"
         android:orientation="vertical"
-        app:layout_constraintStart_toEndOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="0dp">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar">
+
         <LinearLayout
             android:id="@+id/ll_control"
             android:layout_width="match_parent"
@@ -31,45 +33,49 @@
             app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.card.MaterialCardView
-                android:clickable="true"
-                android:focusable="true"
+                app:cardBackgroundColor="#FF8E36"
                 android:id="@+id/ll_create"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_marginEnd="@dimen/dp20"
                 android:layout_weight="1"
+                android:clickable="true"
+                android:focusable="true"
                 app:cardCornerRadius="@dimen/dp20"
                 app:cardElevation="0dp"
+                app:rippleColor="@color/color_988E90"
                 app:strokeColor="@color/white"
                 app:strokeWidth="0dp">
 
                 <RelativeLayout
                     android:id="@+id/rl_create"
-                    android:background="#FF8E36"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
+
                     <TextView
-                        android:fontFamily="@font/poppins_semibold_600"
                         android:id="@+id/create"
-                        android:layout_marginStart="@dimen/dp20"
-                        android:textColor="@color/white"
                         style="@style/TextViewBase"
+                        android:layout_marginStart="@dimen/dp20"
                         android:layout_marginTop="@dimen/dp20"
-                        android:text="@string/create"
-                        android:textSize="@dimen/sp18" />
-                    <TextView
                         android:fontFamily="@font/poppins_semibold_600"
+                        android:text="@string/create"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp18" />
+
+                    <TextView
+                        style="@style/TextViewBase"
                         android:layout_below="@+id/create"
                         android:layout_marginStart="@dimen/dp20"
-                        android:textColor="@color/white"
-                        style="@style/TextViewBase"
+                        android:fontFamily="@font/poppins_semibold_600"
                         android:text="@string/Emoji"
+                        android:textColor="@color/white"
                         android:textSize="@dimen/sp18" />
+
                     <androidx.appcompat.widget.AppCompatImageView
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentEnd="true"
                         android:layout_width="90dp"
                         android:layout_height="100dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
                         android:src="@drawable/smile" />
 
 
@@ -77,84 +83,92 @@
             </com.google.android.material.card.MaterialCardView>
 
             <com.google.android.material.card.MaterialCardView
-                android:focusable="true"
-                android:clickable="true"
-                app:strokeColor="@color/white"
-                app:strokeWidth="0dp"
-                android:id="@+id/ll_mygallery"
+                android:id="@+id/mcv_create_text"
                 android:layout_width="0dp"
                 android:layout_height="150dp"
                 android:layout_weight="1"
-                app:cardBackgroundColor="#EFF1F1"
-                app:cardCornerRadius="@dimen/dp20">
+                android:clickable="true"
+                android:focusable="true"
+                app:cardBackgroundColor="#5A64FF"
+                app:cardCornerRadius="@dimen/dp20"
+                app:rippleColor="@color/color_988E90"
+                app:strokeColor="@color/white"
+                app:strokeWidth="0dp">
 
                 <RelativeLayout
                     android:id="@+id/rl_create_text"
-                    android:background="#5A64FF"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
+
                     <TextView
-                        android:fontFamily="@font/poppins_semibold_600"
-                        android:layout_marginStart="@dimen/dp20"
                         android:id="@+id/create_text"
-                        android:textColor="@color/white"
                         style="@style/TextViewBase"
-                        android:layout_marginTop="@dimen/dp20"
-                        android:text="@string/create"
-                        android:textSize="@dimen/sp18" />
-                    <TextView
-                        android:fontFamily="@font/poppins_semibold_600"
                         android:layout_marginStart="@dimen/dp20"
-                        android:layout_below="@id/create_text"
+                        android:layout_marginTop="@dimen/dp20"
+                        android:fontFamily="@font/poppins_semibold_600"
+                        android:text="@string/create"
                         android:textColor="@color/white"
-                        style="@style/TextViewBase"
-                        android:text="@string/text"
                         android:textSize="@dimen/sp18" />
+
+                    <TextView
+                        style="@style/TextViewBase"
+                        android:layout_below="@id/create_text"
+                        android:layout_marginStart="@dimen/dp20"
+                        android:fontFamily="@font/poppins_semibold_600"
+                        android:text="@string/text"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/sp18" />
+
                     <androidx.appcompat.widget.AppCompatImageView
 
-                        android:layout_alignParentBottom="true"
-                        android:layout_alignParentEnd="true"
                         android:layout_width="90dp"
                         android:layout_height="120dp"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
                         android:src="@drawable/create_text" />
 
 
                 </RelativeLayout>
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
+
         <com.google.android.material.card.MaterialCardView
-            android:layout_marginTop="@dimen/dp20"
-            android:focusable="true"
-            android:clickable="true"
-            app:strokeColor="@color/white"
-            app:strokeWidth="0dp"
-            android:layout_marginHorizontal="@dimen/dp20"
-            app:cardCornerRadius="@dimen/dp16"
+            app:rippleColor="@color/color_988E90"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp20"
+            android:layout_marginTop="@dimen/dp20"
+            android:clickable="true"
+            android:focusable="true"
+            app:cardCornerRadius="@dimen/dp16"
+            app:strokeColor="@color/white"
+            app:strokeWidth="0dp">
+
             <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:background="#FFB787"
                 android:gravity="center"
                 android:orientation="horizontal"
-                android:paddingVertical="@dimen/dp16"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:paddingVertical="@dimen/dp16">
+
                 <androidx.appcompat.widget.AppCompatImageView
+                    android:id="@+id/icon"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
                     android:layout_gravity="center"
                     android:layout_marginEnd="@dimen/dp20"
-                    android:id="@+id/icon"
-                    android:src="@drawable/ic_my_create"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"/>
+                    android:src="@drawable/ic_my_create" />
+
                 <TextView
-                    android:fontFamily="@font/poppins_medium_500"
-                    android:textColor="#000654"
-                    android:layout_gravity="center"
-                    android:textSize="@dimen/sp16"
-                    android:text="@string/my_creation"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/poppins_medium_500"
+                    android:text="@string/my_creation"
+                    android:textColor="#000654"
+                    android:textSize="@dimen/sp16" />
             </LinearLayout>
         </com.google.android.material.card.MaterialCardView>
 
