--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -17,6 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imag_result"
             android:layout_centerInParent="true"
             android:layout_width="match_parent"
             android:layout_height="300dp"/>
@@ -31,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/home"
             android:layout_marginEnd="@dimen/dp20"
             android:background="@drawable/bg_home_result"
             style="@style/TextViewBase"
@@ -41,6 +43,7 @@
             android:text="Home"
             android:layout_width="0dp" />
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/share"
             android:fontFamily="@font/poppins_medium_500"
             android:textColor="@color/white"
             android:textAllCaps="false"
