--- a/app/src/main/res/layout/item_bg_color.xml
+++ b/app/src/main/res/layout/item_bg_color.xml
@@ -7,7 +7,7 @@
     <ImageView
         android:layout_centerInParent="true"
         android:id="@+id/img_bg"
-        android:layout_margin="10dp"
+        android:layout_margin="@dimen/dp5"
         android:layout_gravity="center"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
