--- a/app/src/main/res/layout/activity_create_icon.xml
+++ b/app/src/main/res/layout/activity_create_icon.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CreateIconActivity">
+    tools:context=".activity.CreateIconActivity">
 
     <include
         android:id="@+id/toolbar"
@@ -57,6 +57,7 @@
             style="@style/TextViewBase"/>
         <SeekBar
             android:max="30"
+            android:min="5"
             android:id="@+id/seek_bar"
             android:progressDrawable="@drawable/see_bar_on"
             android:progressTint="#DF6F00"
