--- a/app/src/main/res/layout/activity_customize_smiley.xml
+++ b/app/src/main/res/layout/activity_customize_smiley.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CustomizeSmiley"
+    tools:context=".activity.CustomizeSmiley"
     android:background="#F4DED3">
     <include
         app:layout_constraintTop_toTopOf="parent"
